# caddyfile-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  pages.yaml  validate-caddyfile.yaml
examples/: build_caddyfile.rs  error_handling.rs  parse_and_format.rs
src/: ast.rs  builder.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
testdata/: Caddyfile
tests/: ast.rs  builder.rs  e2e.rs  formatter.rs  lexer.rs  parser.rs  proptest_ast.rs  roundtrip.rs
tests/common/: mod.rs
